# gamescope-dbus

./: .releaserc.yaml  Cargo.toml  Dockerfile  Makefile  README.md
bindings/dbus-xml/: org-shadowblip-gamescope-manager.xml  org-shadowblip-gamescope-wayland.xml  org-shadowblip-gamescope-xwayland.xml
docs/: manager.md  wayland.md  xwayland.md
rootfs/usr/lib/systemd/user/: gamescope-dbus.service
rootfs/usr/share/dbus-1/services/: org.shadowblip.Gamescope.service
rootfs/usr/share/dbus-1/session.d/: org.shadowblip.Gamescope.conf
src/: macros.rs  main.rs  utils.rs
src/gamescope/: manager.rs  mod.rs  wayland.rs  xwayland.rs
src/gamescope/mangoapp/: message.rs  mod.rs  queue.rs  sysvipc.rs
src/gamescope/wayland/: dbus.rs  manager.rs  mod.rs
src/gamescope/wayland/metrics/: dbus.rs  mango_app_reader.rs  mod.rs
src/watcher/: mod.rs
