[package]
name = "gamescope-dbus"
version = "1.13.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Daemon for interacting with Gamescope over DBus"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/gamescope-dbus", dest = "/usr/bin/gamescope-dbus", mode = "755" },
  { source = "./rootfs/usr/share/dbus-1/session.d/org.shadowblip.Gamescope.conf", dest = "/usr/share/dbus-1/session.d/org.shadowblip.Gamescope.conf", mode = "644" },
  { source = "./rootfs/usr/lib/systemd/user/gamescope-dbus.service", dest = "/usr/lib/systemd/user/gamescope-dbus.service", mode = "644" },
]

[dependencies]
log = { version = "0.4.22", features = ["release_max_level_debug"] }
simple_logger = "5.0.0"
tokio = { version = "*", features = ["full"] }
wayland-client = "0.31.6"
zbus = { version = "3.15.2", default-features = false, features = ["tokio"] }
zbus_macros = "3.15.2"
inotify = "0.11.0"
gamescope-wayland-client = { git = "https://github.com/ShadowBlip/gamescope-wayland-client.git", rev = "05a110848031afe1b402e6197e2a03eea0144f0e" }
gamescope-x11-client = { git = "https://github.com/ShadowBlip/gamescope-x11-client.git", rev = "922e02a8c941c278e665639c57a1822abd31bee3" }
serde = "1.0.214"
nix = { version = "0.29.0", features = ["user"] }
tokio-stream = "0.1.17"
packed_struct = "0.10.1"
libc = "0.2.183"
thiserror = "2.0.12"
